<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".main.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/img_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img" />

                <ImageView
                    android:id="@+id/id_img"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="85dp"
                    android:src="@drawable/up_s" />

                <Button
                    android:id="@+id/btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120dp"
                    android:background="@drawable/look"
                    android:onClick="film"
                    android:text="Смотреть"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:id="@+id/tv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="В тренде"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="15dp"
                    android:text="Новое"
                    android:textColor="@color/red"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="15dp"
                    android:text="Для Вас"
                    android:textColor="@color/red"
                    android:textSize="20sp" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/films_f" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"

                    android:src="@drawable/film_th" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="10dp"

                    android:src="@drawable/film_f" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="Вы смотрели"
                    android:textColor="@color/red"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@id/textView"
                    android:src="@drawable/video" />

                <ImageView
                    android:id="@+id/video2"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_below="@id/textView"
                    android:src="@drawable/video2" />

                <ImageView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="220dp"
                    android:src="@drawable/volume" />



                <TextView
                    android:id="@+id/time_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_marginTop="220dp"
                    android:text="12:44"
                    android:textColor="@color/white"
                    android:textSize="15sp" />



                <TextView
                    android:id="@+id/time_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="220dp"
                    android:layout_marginRight="22dp"
                    android:text="45:13"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="228dp"
                    android:src="@drawable/line" />
                <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_marginTop="190dp"
                android:visibility="visible">

                <androidx.appcompat.widget.Toolbar

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="back"
                    app:menu="@menu/comp_menu"
                    app:navigationIcon="@drawable/img_film"
                    app:title="Altered carbon"
                    app:titleTextColor="@color/white" />
            </com.google.android.material.appbar.AppBarLayout>

                <ImageView
                    android:id="@+id/idmggg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:onClick="tool"
                    android:src="@drawable/play" />

                <ImageView
                    android:id="@+id/imggg"
                    android:layout_width="match_parent"
                    android:layout_height="265dp"
                    android:layout_below="@id/textView"
                    android:src="@drawable/reccccc" />

                <ImageView
                    android:id="@+id/imggfg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="100dp"
                    android:onClick="play"
                    android:visibility="invisible"
                    android:src="@drawable/but_play" />
                <TextView
                    android:id="@+id/name_film"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView"
                    android:layout_marginTop="220dp"
                    android:text="Altered Carbon"
                    android:visibility="visible"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemTextColor="@color/red"
        app:menu="@menu/nav_menu" />





</RelativeLayout>